# local-py

./: .env-sample  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE.bazel  create_venv.py  hello.py  requirements.txt
.github/workflows/: ci.yml
python/: BUILD.bazel  chat_gmail_agent.py  credentials.json  gmail_poller.py  hello.py  poll_gmail_agent.py  requirements.txt  setup_venv.py  test_chat_gmail_agent.py  test_gmail_poller.py  test_gmail_polling_agent.py
python/local_py/: __init__.py  chat_gmail_agent.py  get_gmail_token.py  gmail_poller.py  gmail_polling_agent.py  poll_gmail_agent.py
python/tests/: test_chat_gmail_agent.py  test_setup_venv.py
python/tests/local_py/: test_gmail_poller.py  test_gmail_polling_agent.py
scripts/: BUILD.bazel  export_env.sh  pgcli.sh
