load("@pypi//:requirements.bzl", "requirement")
load("@rules_python//python:py_binary.bzl", "py_binary")
load("@rules_python//python:py_library.bzl", "py_library")

filegroup(
    name = "gmail_credentials",
    srcs = ["credentials.json"],
)

py_binary(
    name = "hello",
    srcs = ["hello.py"],
    main = "hello.py",
    deps = [
        requirement("requests"),
        requirement("semantic-kernel"),
        requirement("google-api-python-client"),
        requirement("google-auth"),
        requirement("google-auth-oauthlib"),
    ],
)

py_binary(
    name = "setup_venv",
    srcs = ["setup_venv.py"],
    main = "setup_venv.py",
    data = ["requirements.txt"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "gmail_poller",
    srcs = ["gmail_poller.py"],
    imports = ["."],
    deps = [
        requirement("google-api-python-client"),
        requirement("google-auth"),
        requirement("google-auth-oauthlib"),
        requirement("semantic-kernel"),
    ],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "poll_gmail_agent",
    srcs = ["poll_gmail_agent.py"],
    main = "poll_gmail_agent.py",
    deps = [
        ":gmail_poller",
        requirement("semantic-kernel"),
    ],
    data = [":gmail_credentials"],
)

py_binary(
    name = "chat_gmail_agent",
    srcs = ["chat_gmail_agent.py"],
    main = "chat_gmail_agent.py",
    deps = [
        ":gmail_poller",
        requirement("openai"),
    ],
    data = [":gmail_credentials"],
)

py_binary(
    name = "get_gmail_token",
    srcs = ["get_gmail_token.py"],
    main = "get_gmail_token.py",
    deps = [
        requirement("google-auth"),
        requirement("google-auth-oauthlib"),
    ],
    data = [":gmail_credentials"],
)

py_test(
    name = "gmail_poller_test",
    srcs = ["test_gmail_poller.py"],
    deps = [":gmail_poller"],
)

test_suite(
    name = "tests",
)
